tests/sksl/errors/Ossfuzz31469.glsl
### Compilation failed:

error: 1: function 'n' can exit without returning a value
half n() {}
         ^^
1 error
